[gd_scene load_steps=6 format=3 uid="uid://c415lcwg8ssov"]

[ext_resource type="Script" path="res://projectiles/node_2d.gd" id="1_8gb06"]
[ext_resource type="Texture2D" uid="uid://bg5bjhn7gcr80" path="res://gfx/Untitled.png" id="1_dqafo"]
[ext_resource type="Script" path="res://projectiles/parryable.gd" id="3_il18m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnowq"]
size = Vector2(34, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0flr1"]
size = Vector2(38, 10)

[node name="bullet" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_8gb06")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_lnowq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(7.10543e-15, -13)
scale = Vector2(0.362069, 0.122093)
texture = ExtResource("1_dqafo")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.618
one_shot = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 36
collision_mask = 36
motion_mode = 1

[node name="parryable" type="Node" parent="CharacterBody2D"]
script = ExtResource("3_il18m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_0flr1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="on_parried" from="CharacterBody2D/parryable" to="." method="_on_parryable_on_parried"]
